# libltc_cmake

./: CMakeLists.txt
.github/workflows/: build.yml
src/: decoder.h  encoder.h  ltc.h
